@@ -1,3 +1,9 @@
+2004-11-10  Tom Tromey  <tromey@redhat.com>
+
+	* link.cc (verbose_class_flag): Declare.
+	(wait_for_state): Print message when handling precompiled class.
+	* java/lang/natClass.cc (verbose_class_flag): Moved to link.cc.
+
 2004-11-09  Tom Tromey  <tromey@redhat.com>
 
 	* testsuite/libjava.lang/assign2.out: New file.
